<resources>
    <string name="app_name">TradingDiary</string>
    <string name="quantity">Buy Quantity</string>
    <string name="price_per_unit">Buy Price (1 Unit)</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="total_buying_price">Total Buying Price</string>
    <string name="total_selling_price">Est. Sale Total</string>
    <string name="done">Done</string>
    <string name="target_selling_price">Est. Sale Price (1 Unit)</string>
    <string name="estimated_profit">Est. Profit</string>
    <string name="actual_profit">Actual Profit</string>
    <string name="actual_total_sale">Actual Sale Total</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="target_selling_percentage">Est. Sale Percentage</string>
    <string name="unit">Unit</string>
    <string name="buy_total">Buy Total</string>
    <string name="order_history">Orders History</string>
    <string name="filter">Filter</string>
    <string name="today">Today</string>
    <string name="pick_date">Pick Date</string>
    <string name="none">None</string>
    <string name="recently_completed">Recently Completed</string>
    <string name="recently_added">Recently Added</string>
    <string name="date">Date</string>
    <string name="search">Search</string>
    <string name="delete_all_orders">Delete All Orders</string>
    <string name="change_color">Change Color</string>
    <string name="restore_order">Restore Order</string>
    <string name="online_backup">Online Backup</string>
    <string name="online_restore">Online Restore</string>
    <string name="event_notification">Event Notification</string>

    <plurals name="remind_unit_minute">
        <item quantity="one">in %1$d minute</item>
        <item quantity="other">in %1$d minutes</item>
    </plurals>
    <plurals name="remind_unit_hour">
        <item quantity="one">in %1$d hour</item>
        <item quantity="other">in %1$d hours</item>
    </plurals>
    <plurals name="remind_unit_day">
        <item quantity="one">in %1$d day</item>
        <item quantity="other">in %1$d days</item>
    </plurals>
    <plurals name="remind_unit_week">
        <item quantity="one">in %1$d week</item>
        <item quantity="other">in %1$d weeks</item>
    </plurals>
    <plurals name="remind_unit_second">
        <item quantity="one">%1$d second</item>
        <item quantity="other">%1$d seconds</item>
    </plurals>
</resources>
